# week12-capstone-project

./: .gitignore  Dockerfile  Dockerfile\  LICENSE  README.md  alembic  api  api.md  architecture.md  backend  capstone-project  components  deployment.md  development.md  docker  docker-compose.yml  docker-compose.yml\  docs\  frontend  frontend services  frontend src  github workflows  infrastructure  kubernetes  main.py  main.tsx  models  package.json  pages  pyproject.toml  requirements.txt  scripts\  services  src  store  styles  terraform  tests  tests\  tsconfig.json  (+2 more)
