[project]
name = "portfolio-app"
version = "0.1.0"
description = "Async Python Portfolio Application"
authors = [
    { name = "Your Name" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "sqlalchemy",
    "alembic"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
